--- a/EnigmaCracker-Docker/docker-compose.yml
+++ b/EnigmaCracker-Docker/docker-compose.yml
@@ -4,5 +4,6 @@ services:
     build: .
     environment:
       - ETHERSCAN_API_KEY=your_etherscan_api_key
+      - BSCSCAN_API_KEY=your_your_etherscan_api_key
     volumes:
       - ./data:/usr/src/app/data
