--- a/EnigmaCracker-Docker/EnigmaCracker.env
+++ b/EnigmaCracker-Docker/EnigmaCracker.env
@@ -1,2 +1,3 @@
 ETHERSCAN_API_KEY=RIACQZ3YQ4XHDCZWMC1TCHN4WP3ZR2CSF7
 BSCSCAN_API_KEY=PW4JBX81E12BK9UBHRCTDCRGFR33F1TSGY
+ALCHEMY_API_KEY=Uq6vO7mqOopDUJD7c8B3D8fPd0T_pqEy
