--- a/EnigmaCracker-Docker/docker-compose.yml
+++ b/EnigmaCracker-Docker/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     environment:
       - ETHERSCAN_API_KEY=RIACQZ3YQ4XHDCZWMC1TCHN4WP3ZR2CSF7
       - BSCSCAN_API_KEY=PW4JBX81E12BK9UBHRCTDCRGFR33F1TSGY
-      - SOLSCAN_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjcmVhdGVkQXQiOjE3MzA5ODM5ODM2ODIsImVtYWlsIjoibWFydGluZnJhbmtlMjMwN0B3ZWIuZGUiLCJhY3Rpb24iOiJ0b2tlbi1hcGkiLCJhcGlWZXJzaW9uIjoidjIiLCJpYXQiOjE3MzA5ODM5ODN9.dnu85JtVO-15E5y4jIv3Noa8C1lrMf6yvU3R25pBUpE
+      - ALCHEMY_API_KEY=Uq6vO7mqOopDUJD7c8B3D8fPd0T_pqEy
     volumes:
       - ./data:/usr/src/app/data
