--- a/EnigmaCracker-Docker/EnigmaCracker.env
+++ b/EnigmaCracker-Docker/EnigmaCracker.env
@@ -1,4 +1,7 @@
 ETHERSCAN_API_KEY=RIACQZ3YQ4XHDCZWMC1TCHN4WP3ZR2CSF7
 BSCSCAN_API_KEY=PW4JBX81E12BK9UBHRCTDCRGFR33F1TSGY
 ALCHEMY_API_KEY=Uq6vO7mqOopDUJD7c8B3D8fPd0T_pqEy
+FTMSCAN_API_KEY=A3WXQ38RNJ2A72413IEX11Z2NPKSHGMRMS
+POLYGONSCAN_API_KEY=DIQYNSJFY7FD9H6W1CQKANA7PCVQUCCXMK
+WORLDSCAN_API_KEY=2TEB1WZD1531NPPK1SAQ38VXGV6RKY11B5
 
